agregado de dockerignore, implementacion de la libreria dotenv, correcciones generales
