# source/back-end/sample/routes/routes.js
@@ -1,8 +1,7 @@
 const { Router } = require('express');  //importando la funcion router de la libreria express
 const path = require('path');  //importando path y asignandolo a const path
-const { getFlights, getAirlines, getFlightsByAirports, getFlightsByDateRange } = require('../sample.controller'); //importando esquema de vuelos
+const { getFlights, getAirlines, getFlightsByAirports, getFlightsByDateRange, getAirport } = require('../sample.controller'); //importando esquema de vuelos
 const router = Router();
-
 //endpoints
 
 router.get('/', (req, res) => {
@@ -12,6 +11,7 @@ router.get('/', (req, res) => {
 router.get('/vuelos/:id', getFlights);
 router.get('/porAeropuerto', getFlightsByAirports);
 router.get('/porFecha', getFlightsByDateRange);
-router.get('/aerolineas', getAirlines)
+router.get('/aerolineas', getAirlines);
+router.get('/aeropuertos', getAirport);
 
 module.exports = { router };
