# source/back-end/sample/sample.controller.js
@@ -1,13 +1,12 @@
 const { request, response } = require("express");
 const mongoose = require('mongoose');
-
 // Mongoose Schemas
 const Flight = require('./flight.schema');
 const Airport = require('./airport.schema');
 const Airline = require('./airline.schema');
 
 /**
- * Sample Controller
+ * getFlights requires a flight id query to return the flight referenced by that id.
  * @param {JSON} req request information
  * @param {JSON} res response information
  * @returns {JSON} return description
@@ -32,6 +31,13 @@ const getFlights = async (req = request, res = response) => {
     }
 };
 
+/**
+ * getFlightsByAirports requires two queries with IATA code type originAirport, destinationAirport to return the flights referenced by the query.
+ * @param {JSON} req request information
+ * @param {JSON} res response information
+ * @returns {JSON} return description
+ */
+
 const getFlightsByAirports = async (req, res) => {
     try {
         const { originAirport, destinationAirport } = req.query;
@@ -50,6 +56,13 @@ const getFlightsByAirports = async (req, res) => {
         res.status(500).json({ error: error.message });
     }
 };
+
+/**
+ * getFlightsByDateRange requires a departure date query to return the flights referenced by that departure date. But the information can leak through the airline, the origin airport and the destination airport. Everything in IATA Code.
+ * @param {JSON} req request information
+ * @param {JSON} res response information
+ * @returns {JSON} return description
+ */
 
 const getFlightsByDateRange = async (req, res) => {
     try {
@@ -85,6 +98,13 @@ const getFlightsByDateRange = async (req, res) => {
     }
 };
 
+/**
+ * getAirlines only requires an IATA code query to return the associated airlines.
+ * @param {JSON} req request information
+ * @param {JSON} res response information
+ * @returns {JSON} return description
+ */
+
 const getAirlines = async (req, res) => {
     try {
         const airlines = await Airline.find().exec();
@@ -94,9 +114,34 @@ const getAirlines = async (req, res) => {
     }
 };
 
+/**
+ * getAirport requires a query of the airport with IATA code to return the airports.
+ * @param {JSON} req request information
+ * @param {JSON} res response information
+ * @returns {JSON} return description
+ */
+
+const getAirport = async (req, res) => {
+    try {
+        const { airport } = req.query;
+
+        if (!airport) {
+            return res.status(404).json({ error: 'Missing required parameters' });
+        }
+
+        const airports = await Airport.findOne({
+            IATA_CODE: airport}).exec();
+
+        res.json({ airports });
+    } catch (error) {
+        res.status(500).json({ error: error.message });
+    }
+};
+
 module.exports = {
     getAirlines,
     getFlights,
     getFlightsByAirports,
-    getFlightsByDateRange
+    getFlightsByDateRange,
+    getAirport
 };
